# simuhome-tkg-agent

./: .env.example  README.md  day_sim.py  main.py  maual_test.py  pyproject.toml  sim_day.py
eval/: evaluator.py
experiments/day_sim/: session_20260708_153405.json  session_20260708_153405.md
experiments/demo/: results.csv
kaggle_scripts/: kaggle_server.py
scripts/: debug_cli.py  graph_debug_cli.py
simuhome_tkg_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tkg_agent/agent/: base_agent.py  gemini_provider.py  groq_provider.py  kaggle_provider.py  tkg_agent.py
tkg_agent/graph/: graphiti.py  graphiti_client.py  neo4j_client.py
tkg_agent/ingestor/: episode_ingestor.py
tkg_agent/retrieval/: retriever.py
