[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "simuhome-tkg-agent"
version = "0.1.0"
description = "SimuHome agent with Temporal Knowledge Graph memory"
requires-python = ">=3.10"
dependencies = [
    "groq>=0.9.0",
    "neo4j>=5.20.0",
    "streamlit>=1.35.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.scripts]
tkg-agent = "main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["tkg_agent*"]
